[tool.poetry]
name = "keras_glove"
version = "0.1.0"
description = "GloVe implementation in Keras"
authors = ["Thanos Papaoikonomou <thanos.papaoikonomou@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.4.1"
scikit-learn = "^0.24.1"
click = "^7.1.2"
datasets = "^1.2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-mock = "^3.5.1"
pytest-cov = "^2.11.1"

[tool.poetry.scripts]
kglove = "keras_glove.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
